--- a/css/bootstrapmap.css
+++ b/css/bootstrapmap.css
@@ -114,13 +114,14 @@ body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom
   bottom: 0; 
   z-index:50;  
 }
-#m1{background-color:#e41a1c; color: #000000; margin-top: -5px; margin-bottom: -5px;}
-#m2{background-color:#377eb8; color: #000000; margin-top: -5px; margin-bottom: -5px;}
-#m3{background-color:#4daf4a; color: #000000; margin-top: -5px; margin-bottom: -5px;}
-#m4{background-color:#984ea3; color: #000000; margin-top: -5px; margin-bottom: -5px;}
-#m5{background-color:#ff7f00; color: #000000; margin-top: -5px; margin-bottom: -5px;}
-#m6{background-color:#ffff33; color: #000000; margin-top: -5px; margin-bottom: -5px;}
-#m7{background-color:#a65628; color: #000000; margin-top: -5px; margin-bottom: -5px;}
+
+#m1{background-color:#e41a1c; color: #000000; padding: 5px;}
+#m2{background-color:#377eb8; color: #000000; padding: 5px;}
+#m3{background-color:#4daf4a; color: #000000; padding: 5px;}
+#m4{background-color:#984ea3; color: #000000; padding: 5px;}
+#m5{background-color:#ff7f00; color: #000000; padding: 5px;}
+#m6{background-color:#ffff33; color: #000000; padding: 5px;}
+#m7{background-color:#a65628; color: #000000; padding: 5px;}
 
 #cntryGrp{width: 280px;}
 
